GNOME Bugzilla – Bug 660630
kate: fix race condition on PAUSED->READY state change
Last modified: 2011-10-03 08:37:33 UTC
Created attachment 197959 [details] [review] kate: fix race condition on PAUSED->READY state change
commit 12bb47343d970d7c4ceb625e30351fbba8db2c3e Author: Vincent Penquerc'h <ogg.k.ogg.k@googlemail.com> Date: Sat Oct 1 14:30:07 2011 +0100 kate: fix race condition on PAUSED->READY state change https://bugzilla.gnome.org/show_bug.cgi?id=660630