kate: fix race condition on PAUSED->READY state change

https://bugzilla.gnome.org/show_bug.cgi?id=660630